content complete - next is images
