# src/api/content/content.js
@@ -16,10 +16,39 @@ export default {
         const content = new Content(options);
         return send.set200(await content.save(), 'Content');
     },
-    async returnAll(product, domain) {
-        const query = {};
-        if (product) query.product = product;
-        if (domain) query.domain = domain;
+    async returnAll(q) {
+        const query = q
+        if (query.search) {
+            query.$text = { $search: query.search };
+            delete query.search;
+        }
         return send.set200(await Content.find(query));
+    },
+    async _getOne(lookup) {
+        const query = lookup;
+        let content = await Content.findOne(query);
+        if (!content) {
+            query.slug = query.guid;
+            delete query.guid;
+            content = await Content.findOne(query);
+        }
+        if (!content) throw send.fail404(query);
+        return content.toObject();
+    },
+    async patchOne(q, update) {
+        const query = q;
+        let updated = await Content.findOneAndUpdate(query, update, { new: true });
+        if (!updated) {
+            query.slug = query.guid;
+            delete query.guid;
+            updated = await Content.findOneAndUpdate(query, update, { new: true });
+        }
+        if (!updated) throw send.fail404(query);
+        return send.set200(updated, 'Content');
+    },
+    async deleteOne(query) {
+        const updated = await Content.findOneAndRemove(query);
+        if (!updated) throw send.fail404(query);
+        return send.set200(updated, 'Content');
     }
 };
